--- a/.github/workflows/qa.yaml
+++ b/.github/workflows/qa.yaml
@@ -18,7 +18,7 @@ jobs:
       - name: Deploy to S3
         uses: jakejarvis/s3-sync-action@master
         with:
-          args: --alc public-read --delete
+          args: --acl public-read --delete
         env:
           AWS_S3_BUCKET: ${{ secrets.AWS_STAGING_BUCKET_NAME }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_STAGING_ACCESS_KEY_ID }}
