--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/edwintrumpet/codeblog#readme",
   "dependencies": {
+    "@ant-design/icons": "^4.5.0",
     "antd": "4.12.2",
     "gatsby": "2.32.3",
     "gatsby-plugin-antd": "2.2.0",
